add feature donate and request blood

--- a/frontend/src/views/donateRequest/donate.html
+++ b/frontend/src/views/donateRequest/donate.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <h2>Blood Donation Form</h2>
-  <form>
+  <form id="donate-form">
     <div class="form-group">
       <label for="donorName">Donor Name</label>
       <input
@@ -52,3 +52,4 @@
     <button type="submit" class="btn btn-primary">Donate</button>
   </form>
 </div>
+<script src="donate.ts"></script>
