--- a/frontend/src/views/donateRequest/request.html
+++ b/frontend/src/views/donateRequest/request.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <h2>Blood Request Form</h2>
-  <form>
+  <form id="request-form">
     <div class="form-group">
       <label for="requesterName">Requester Name</label>
       <input
