--- a/frontend/src/views/home/home.html
+++ b/frontend/src/views/home/home.html
@@ -1,12 +1,127 @@
-<div class="container mt-5">
-  <h1>Welcome to Home Page</h1>
-  <div>
-    <button id="get-health-center-list" class="btn btn-primary mt-3">
-      Get Health Center List
-    </button>
-    <button id="get-donor-list" class="btn btn-primary mt-3">
-      Get Donor List
-    </button>
-  </div>
-  <div id="get-details" class="mt-4"></div>
-</div>
+    <!-- Header Start -->
+    <section id="header">
+        <div class="container">
+            <h1>We are seeking for a better community health.</h1>
+            <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repellat inventore nemo repudiandae
+                ipsum quos.</h4>
+                <div class="details">
+
+                  <button class="btn count" >Donors registered</button>
+                  <button class="btn count" >Blood units collected</button>
+                </div>
+        </div>
+    </section>
+    <!-- Header End -->
+
+    <!-- Sub Header Start -->
+    <section id="sub-header">
+        <div class="sub-header__container">
+          <button class="btn list" id="get-health-center-list" >Get Health Centers List</button>
+          <button class="btn list" id="get-donor-list">Get Donor List</button>
+          <button class="btn list" id="get-donation-camp-list" >Donation Camp</button>
+        </div>
+        <div id="get-details" class="mt-4"></div>
+
+    </section>
+    <!-- Sub Header End -->
+
+    <!-- Articles Start -->
+    <section id="articles">
+        <div class="container">
+            <h2 style="display: inline-block;">Articles</h2>
+            <div class="swiper-container">
+            <div class="button-area" style="display: inline-block; margin-left: 850px;">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </button>
+            </div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="card-img-top" style="position: relative;">
+                                <img src="imgs/p3.jpg" alt="Card image">
+                                <button class="like"><i class="fas fa-heart icon-large"></i></button>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Blood Types</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                                    laborum
+                                    dolor minus quibusdam sequi asperiores? Fugiat aut consectetur laudantium ea sed
+                                    nihil
+                                    dolore, in mollitia blanditiis, rem omnis recusandae maiores?</p>
+                                <div class="btn-cont">
+                                    <button class="card-btn" onclick= "window.location.href = 'article.html';">Details</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="card-img-top" style="position: relative;">
+                                <img src="imgs/p4.jpg" alt="Card image">
+                                <button class="like"><i class="fas fa-heart icon-large"></i></button>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Donations Benefits</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                                    laborum
+                                    dolor minus quibusdam sequi asperiores? Fugiat aut consectetur laudantium ea sed
+                                    nihil
+                                    dolore, in mollitia blanditiis, rem omnis recusandae maiores?</p>
+                                <div class="btn-cont">
+                                    <button class="card-btn" onclick= "window.location.href = 'article.html';">Details</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card ">
+                            <div class="card-img-top" style="position: relative;">
+                                <img src="imgs/p1.jpg" alt="Card image">
+                                <button class="like"><i class="fas fa-heart icon-large"></i></button>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">Disease Protection</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                                    laborum
+                                    dolor minus quibusdam sequi asperiores? Fugiat aut consectetur laudantium ea sed
+                                    nihil
+                                    dolore, in mollitia blanditiis, rem omnis recusandae maiores?</p>
+                                <div class="btn-cont">
+                                    <button class="card-btn" onclick= "window.location.href = 'article.html';">Details</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="card-img-top" style="position: relative;">
+                                <img src="imgs/p5.jpg" alt="Card image">
+                                <button class="like"><i class="fas fa-heart icon-large"></i></button>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="card-title">How To Donate?</h4>
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                                    laborum
+                                    dolor minus quibusdam sequi asperiores? Fugiat aut consectetur laudantium ea sed
+                                    nihil
+                                    dolore, in mollitia blanditiis, rem omnis recusandae maiores?</p>
+                                <div class="btn-cont">
+                                    <button class="card-btn" onclick= "window.location.href = 'article.html';">Details</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Articles End -->
+
+    <!-- Footer Start -->
+    <section id="footer">
+        
+    </section>
+    <!-- Footer End -->
+
+
