add feature filter and add image to form

--- a/frontend/public/assets/css/home.css
+++ b/frontend/public/assets/css/home.css
@@ -67,7 +67,7 @@ body {
 }
 
 .sub-header__container .list {
-  background-color: aquamarine;
+  background-color: rgb(83, 223, 176);
   width: 20rem;
   height: 8rem;
   font-size: 2rem;
