--- a/frontend/src/views/home/home.html
+++ b/frontend/src/views/home/home.html
@@ -16,8 +16,8 @@
     <!-- Sub Header Start -->
     <section id="sub-header">
         <div class="sub-header__container">
-          <button class="btn list" id="get-health-center-list" >Get Health Centers List</button>
-          <button class="btn list" id="get-donor-list">Get Donor List</button>
+          <button class="btn list" id="get-health-center-list" data-type="health_center">Get Health Centers List</button>
+          <button class="btn list" id="get-donor-list" data-type="donor">Get Donor List</button>
           <button class="btn list" id="get-donation-camp-list" >Donation Camp</button>
         </div>
         <div id="get-details" class="mt-4"></div>
