--- a/frontend/src/views/login/login.html
+++ b/frontend/src/views/login/login.html
@@ -1,22 +1,34 @@
-<form id="login-form" class="container mt-5">
-  <div class="form-group">
-    <label for="emailInput">Email address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="emailInput"
-      aria-describedby="emailHelp"
-      placeholder="Enter email"
-    />
+<div class="login-div">
+  <div class="login-img">
+    <img src="../../../public/assets/img/home2.jpg" alt="login" />
   </div>
-  <div class="form-group">
-    <label for="passwordInput">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="passwordInput"
-      placeholder="Password"
-    />
+  <div class="form-overlay">
+    <h2>
+      <i class="fas fa-tint"></i>
+      <i class="fas fa-tint"></i>
+    </h2>
+    <p class="tagline">Be a Blood Buddy – Donate and Save Lives!</p>
+    <form id="login-form">
+      <div class="form-group">
+        <label for="emailInput">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="emailInput"
+          aria-describedby="emailHelp"
+          placeholder="Enter email"
+        />
+      </div>
+      <div class="form-group">
+        <label for="passwordInput">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="passwordInput"
+          placeholder="Password"
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
