--- a/frontend/src/views/signup/signupUser.html
+++ b/frontend/src/views/signup/signupUser.html
@@ -1,60 +1,65 @@
-<div class="container mt-5">
-  <h2>User Form</h2>
-  <form id="signUpUser-form">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="nameInput"
-        placeholder="Enter name"
-      />
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input
-        type="email"
-        class="form-control"
-        id="emailInput"
-        placeholder="Enter email"
-      />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="passwordInput"
-        placeholder="Enter password"
-      />
-    </div>
-    <div class="form-group">
-      <label for="phone">Phone</label>
-      <input
-        type="text"
-        class="form-control"
-        id="phoneInput"
-        placeholder="Enter phone number"
-      />
-    </div>
-    <div class="form-group">
-      <label for="district">District</label>
-      <input
-        type="text"
-        class="form-control"
-        id="districtInput"
-        placeholder="Enter district"
-      />
-    </div>
-    <div class="form-group">
-      <label for="location">Location</label>
-      <input
-        type="text"
-        class="form-control"
-        id="locationInput"
-        placeholder="Enter location"
-      />
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+<div class="signup-div">
+  <div class="signup-img">
+    <img src="../../../public/assets/img/home2.jpg" alt="signupUser" />
+  </div>
+  <div class="form-overlay">
+    <h2>User Form</h2>
+    <form id="signUpUser-form">
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="nameInput"
+          placeholder="Enter name"
+        />
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input
+          type="email"
+          class="form-control"
+          id="emailInput"
+          placeholder="Enter email"
+        />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="passwordInput"
+          placeholder="Enter password"
+        />
+      </div>
+      <div class="form-group">
+        <label for="phone">Phone</label>
+        <input
+          type="text"
+          class="form-control"
+          id="phoneInput"
+          placeholder="Enter phone number"
+        />
+      </div>
+      <div class="form-group">
+        <label for="district">District</label>
+        <input
+          type="text"
+          class="form-control"
+          id="districtInput"
+          placeholder="Enter district"
+        />
+      </div>
+      <div class="form-group">
+        <label for="location">Location</label>
+        <input
+          type="text"
+          class="form-control"
+          id="locationInput"
+          placeholder="Enter location"
+        />
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 </div>
