--- a/frontend/public/assets/css/home.css
+++ b/frontend/public/assets/css/home.css
@@ -62,12 +62,12 @@ body {
 .sub-header__container {
   display: flex;
   flex-wrap: wrap;
-  /* margin-left: 1em; */
   justify-content: space-around;
 }
 
 .sub-header__container .list {
-  background-color: rgb(83, 223, 176);
+  background-color: #d12a2a;
+  color: white;
   width: 20rem;
   height: 8rem;
   font-size: 2rem;
