--- a/frontend/src/views/login/login.html
+++ b/frontend/src/views/login/login.html
@@ -28,7 +28,12 @@
           placeholder="Password"
         />
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Log In</button>
     </form>
+    <p class="signup-prompt mt-2">Didn't have an account?</p>
+    <div class="signup-options">
+      <a href="/signupuser" class="">SignUp as User</a>
+      <a href="/signuphealthcenter" class="">SignUp as Health Center</a>
+    </div>
   </div>
 </div>
