--- a/frontend/src/views/signup/signupUser.html
+++ b/frontend/src/views/signup/signupUser.html
@@ -59,7 +59,7 @@
           placeholder="Enter location"
         />
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
   </div>
 </div>
