--- a/frontend/public/assets/css/home.css
+++ b/frontend/public/assets/css/home.css
@@ -2,20 +2,34 @@ body {
   font-family: "Times New Roman", Times, serif;
 }
 
+.nav-link {
+  font-size: 1.5rem;
+  margin: 1% 2%;
+}
+
 #header {
   background-image: url(../img/home.jpg);
-  opacity: 0.5;
+  opacity: 0.8;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   height: 550px;
   z-index: 1;
 }
+#background-video {
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
 
 #header .container {
   width: 37%;
   margin-right: 0;
-  /* padding: 30px 35px 40px 10px; */
   text-align: left;
 }
 
@@ -32,19 +46,9 @@ body {
   margin-bottom: 0.5rem;
 }
 
-#header .details {
-  display: flex;
-  justify-content: space-evenly;
-  z-index: 2;
-}
-
-#header .count {
-  background-color: red;
-  border: 1px solid darkred;
-  font-size: 1.5rem;
-  color: white;
-  width: 12rem;
-  height: 8rem;
+#header .home-title {
+  position: absolute;
+  top: 15rem;
 }
 
 /* Header End */
@@ -67,6 +71,7 @@ body {
 
 .sub-header__container .list {
   background-color: #d12a2a;
+  border-radius: 10%;
   color: white;
   width: 20rem;
   height: 8rem;
@@ -82,91 +87,94 @@ body {
 /***************************/
 
 /***************************/
+/* Info Start */
+
+#info {
+  background-color: #fdf8f8;
+  margin-bottom: 5%;
+}
+
+#info .container {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#info .container2 {
+  align-self: center;
+}
+
+/***************************/
+/* Info End */
+
+/***************************/
 /* Articles Start */
 
-#articles h2 {
-  margin: 40px 0px 40px 0px;
-  color: darkred;
+#articles {
+  background-color: #ead7d7;
 }
 
-#articles .container .card img {
+#articles .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.article-content {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
   width: 100%;
+  max-width: 1200px;
 }
 
-#articles .container .card {
-  padding: 2px;
-  border-radius: 5px;
-  margin-right: 20px;
+.left-side {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
-#articles .swiper-container .swiper-button-next {
-  background-image: url(../imgs/arrow.png);
+.left-side img {
+  align-self: center;
+  max-width: 100%;
+  height: auto;
 }
 
-#articles .swiper-container .swiper-button-prev {
-  background-image: url(../imgs/arrow.png);
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+.right-side {
+  flex: 1;
+  padding: 10px;
 }
 
-#articles .container .card .like {
-  position: absolute;
-  top: 15%;
-  left: 12%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: rgba(85, 85, 85, 0.678);
-  color: white;
-  font-size: 22px;
-  padding: 8px 15px;
-  border: none;
-  cursor: pointer;
-  border-radius: 30px;
-}
-
-#articles .container .card .like {
-  position: absolute;
-  top: 15%;
-  left: 12%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: rgba(85, 85, 85, 0.678);
-  color: white;
-  font-size: 22px;
-  padding: 8px 15px;
-  border: none;
-  cursor: pointer;
-  border-radius: 30px;
-}
-
-#articles .container .card .like:hover {
-  background-color: darkred;
-}
-
-#articles .container .card h4 {
-  color: darkred;
-}
-
-#articles .container .card p {
-  color: rgb(51, 58, 65);
-  margin-bottom: 25px;
-}
-
-#articles .card .card-btn {
-  padding: 5px 40px 5px 40px;
-  border-radius: 5px;
-  border-color: rgb(51, 58, 65);
-  color: white;
-  background-color: rgb(51, 58, 65);
-}
-
-#articles .card .card-btn:hover {
-  color: darkorange;
-  transition: color 0.5s;
-}
-
-#articles .card .btn-cont {
+.right-side h2 {
+  color: red;
   text-align: center;
+}
+
+.right-side h3 {
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
+
+.blood-type-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
+}
+
+.blood-type-table th,
+.blood-type-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+.blood-type-table th {
+  background-color: red;
+  color: white;
 }
 
 /* Articles End */
