--- a/frontend/src/views/dashboard/healthCenterDashboard/healthCenterDashboard.html
+++ b/frontend/src/views/dashboard/healthCenterDashboard/healthCenterDashboard.html
@@ -14,6 +14,10 @@
       <i class="fas fa-boxes"></i>
       View Inventory
     </button>
+    <button class="btn btn-dark w-100 mb-2" id="hc-add-donation-camp">
+      <i class="fas fa-marker"></i>
+      Add Donation Camp
+    </button>
   </div>
   <div id="healthcenter-details">
 
