--- a/frontend/src/views/dashboard/adminDashboard/adminDashboard.html
+++ b/frontend/src/views/dashboard/adminDashboard/adminDashboard.html
@@ -1,10 +1,10 @@
 <div class="d-flex" id="main-dashboard">
   <div class="sidebar">
     <button class="btn btn-dark w-100 mb-2" id="user-crud">
-      <i class="fas fa-users"></i> User CRUD
+      <i class="fas fa-users"></i> User
     </button>
     <button class="btn btn-dark w-100 mb-2" id="hc-crud">
-      <i class="fas fa-hospital"></i> Health Center CRUD
+      <i class="fas fa-hospital"></i> Health Center
     </button>
     <button class="btn btn-dark w-100 mb-2" id="donation-camp-crud">
       <i class="fas fa-calendar-day"></i> Donation Camp
