add validation on frontend

--- a/frontend/src/views/login/login.html
+++ b/frontend/src/views/login/login.html
@@ -17,6 +17,7 @@
           id="emailInput"
           aria-describedby="emailHelp"
           placeholder="Enter email"
+          required
         />
       </div>
       <div class="form-group">
@@ -26,6 +27,7 @@
           class="form-control"
           id="passwordInput"
           placeholder="Password"
+          required
         />
       </div>
       <button type="submit" class="btn btn-primary">Log In</button>
