--- a/frontend/src/views/signup/signupHealthCenter.html
+++ b/frontend/src/views/signup/signupHealthCenter.html
@@ -12,6 +12,7 @@
           class="form-control"
           id="nameInput"
           placeholder="Enter name"
+          required
         />
       </div>
       <div class="form-group">
@@ -21,6 +22,7 @@
           class="form-control"
           id="emailInput"
           placeholder="Enter email"
+          required
         />
       </div>
       <div class="form-group">
@@ -30,6 +32,7 @@
           class="form-control"
           id="passwordInput"
           placeholder="Enter password"
+          required
         />
       </div>
       <div class="form-group">
@@ -39,6 +42,7 @@
           class="form-control"
           id="phoneInput"
           placeholder="Enter phone number"
+          required
         />
       </div>
       <div class="form-group">
@@ -48,6 +52,7 @@
           class="form-control"
           id="districtInput"
           placeholder="Enter district"
+          required
         />
       </div>
       <div class="form-group">
@@ -57,6 +62,7 @@
           class="form-control"
           id="locationInput"
           placeholder="Enter location"
+          required
         />
       </div>
       <div class="form-group">
@@ -67,6 +73,7 @@
         class="form-control"
           id="imageInput"
           placeholder="Enter image URLs"
+          required
         />
       </div>
       <div class="form-group">
